[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/abilities/shoot/shell_impact.wav" type="AudioStream" id=1]
[ext_resource path="res://player/abilities/shoot/Shell.gd" type="Script" id=2]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.01
bottom_radius = 0.01
height = 0.05

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 1, 0, 1 )
metallic = 1.0
roughness = 0.1

[node name="Shell" type="RigidBody"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="ImpactSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="AudioTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true
autostart = true

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true
[connection signal="timeout" from="AudioTimer" to="." method="_on_AudioTimer_timeout"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
